--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
     <link href="public/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="public/css/main.css" rel="stylesheet">
-    <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
+
+    
+    <!-- CSS File  AOS -->
     <link href="public/css/aos.css" rel="stylesheet">
+
+    <!-- Main CSS File -->
+    <link href="public/css/main.css" rel="stylesheet">
+
     <title>Oumaima Creation CV</title>
 </head>
 
@@ -44,7 +55,7 @@
             </div>
         </nav>
     </header>
-     <!-- ---------------------------------------Navbar------------------------------------------------ -->
+     <!-- ---------------------------------------profile------------------------------------------------ -->
     <div class="content">
         <div class="wrapper">
             <div class="content-profile">
@@ -158,7 +169,7 @@
                 </div>
             </div>
         </div>
-        <!-- ---------------------------------------Partiee Skills------------------------------------------------- -->
+        <!-- ---------------------------------------Partie Skills------------------------------------------------- -->
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
         <div class="section" id="skills">
             <div class="container">
@@ -269,198 +280,63 @@
             </div>
 
         </div>
-        <div class="section" id="portfolio">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 ml-auto mr-auto">
-                        <div class="h4 text-center mb-4 mt-4 title">Portfolio</div>
-                        <div class="nav-align-center">
-                            <ul class="nav nav-pills nav-pills-primary" role="tablist">
-                                <li class="nav-item"><a class="nav-link active" data-toggle="tab"
-                                        href="#web-development" role="tablist"><i class="fa fa-laptop"
-                                            aria-hidden="true"></i></a></li>
-                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design"
-                                        role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
-                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography"
-                                        role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-content gallery mb-4  mt-4">
-                    <div class="tab-pane active" id="web-development">
-                        <div class="ml-auto mr-auto">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-1.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Recent Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-2.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Startup Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-3.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Food Order Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-4.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Web Advertising Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
+         <!-- Portfolio-->
+         <div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row g-0">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                    <div class="tab-pane" id="graphic-design" role="tabpanel">
-                        <div class="ml-auto mr-auto">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-1.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Triangle Pattern</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-2.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Abstract Umbrella</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-3.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Cube Surface Texture</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-4.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Abstract Line</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                    <div class="tab-pane" id="Photography" role="tabpanel">
-                        <div class="ml-auto mr-auto">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-1.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-3.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Wedding Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-2.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Beach Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-4.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Nature Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                        </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
