--- a/index.html
+++ b/index.html
@@ -280,63 +280,198 @@
             </div>
 
         </div>
-         <!-- Portfolio-->
-         <div id="portfolio">
-            <div class="container-fluid p-0">
-                <div class="row g-0">
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
+        <div class="section" id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 ml-auto mr-auto">
+                        <div class="h4 text-center mb-4 mt-4 title">Portfolio</div>
+                        <div class="nav-align-center">
+                            <ul class="nav nav-pills nav-pills-primary" role="tablist">
+                                <li class="nav-item"><a class="nav-link active" data-toggle="tab"
+                                        href="#web-development" role="tablist"><i class="fa fa-laptop"
+                                            aria-hidden="true"></i></a></li>
+                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design"
+                                        role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
+                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography"
+                                        role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                </div>
+                <div class="tab-content gallery mb-4  mt-4">
+                    <div class="tab-pane active" id="web-development">
+                        <div class="ml-auto mr-auto">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#web-development">
+                                            <figure class="cc-effect"><img src="public/images/project-1.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Recent Project</div>
+                                                    <p>Web Development</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#web-development">
+                                            <figure class="cc-effect"><img src="public/images/project-2.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Startup Project</div>
+                                                    <p>Web Development</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#web-development">
+                                            <figure class="cc-effect"><img src="public/images/project-3.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Food Order Project</div>
+                                                    <p>Web Development</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#web-development">
+                                            <figure class="cc-effect"><img src="public/images/project-4.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Web Advertising Project</div>
+                                                    <p>Web Development</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                    <div class="tab-pane" id="graphic-design" role="tabpanel">
+                        <div class="ml-auto mr-auto">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#graphic-design">
+                                            <figure class="cc-effect"><img src="public/images/graphic-design-1.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Triangle Pattern</div>
+                                                    <p>Graphic Design</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#graphic-design">
+                                            <figure class="cc-effect"><img src="public/images/graphic-design-2.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Abstract Umbrella</div>
+                                                    <p>Graphic Design</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#graphic-design">
+                                            <figure class="cc-effect"><img src="public/images/graphic-design-3.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Cube Surface Texture</div>
+                                                    <p>Graphic Design</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#graphic-design">
+                                            <figure class="cc-effect"><img src="public/images/graphic-design-4.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Abstract Line</div>
+                                                    <p>Graphic Design</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
+                        </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                    <div class="tab-pane" id="Photography" role="tabpanel">
+                        <div class="ml-auto mr-auto">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#Photography">
+                                            <figure class="cc-effect"><img src="public/images/photography-1.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Photoshoot</div>
+                                                    <p>Photography</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#Photography">
+                                            <figure class="cc-effect"><img src="public/images/photography-3.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Wedding Photoshoot</div>
+                                                    <p>Photography</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#Photography">
+                                            <figure class="cc-effect"><img src="public/images/photography-2.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Beach Photoshoot</div>
+                                                    <p>Photography</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
+                                        data-aos-anchor-placement="top-bottom">
+                                        <a href="#Photography">
+                                            <figure class="cc-effect"><img src="public/images/photography-4.jpg"
+                                                    alt="Image" />
+                                                <figcaption>
+                                                    <div class="h4">Nature Photoshoot</div>
+                                                    <p>Photography</p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
