--- a/index.html
+++ b/index.html
@@ -280,202 +280,122 @@
             </div>
 
         </div>
-        <div class="section" id="portfolio">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 ml-auto mr-auto">
-                        <div class="h4 text-center mb-4 mt-4 title">Portfolio</div>
-                        <div class="nav-align-center">
-                            <ul class="nav nav-pills nav-pills-primary" role="tablist">
-                                <li class="nav-item"><a class="nav-link active" data-toggle="tab"
-                                        href="#web-development" role="tablist"><i class="fa fa-laptop"
-                                            aria-hidden="true"></i></a></li>
-                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#graphic-design"
-                                        role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
-                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Photography"
-                                        role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-content gallery mb-4  mt-4">
-                    <div class="tab-pane active" id="web-development">
-                        <div class="ml-auto mr-auto">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-1.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Recent Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-2.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Startup Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-3.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Food Order Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#web-development">
-                                            <figure class="cc-effect"><img src="public/images/project-4.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Web Advertising Project</div>
-                                                    <p>Web Development</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-pane" id="graphic-design" role="tabpanel">
-                        <div class="ml-auto mr-auto">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-1.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Triangle Pattern</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-2.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Abstract Umbrella</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-3.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Cube Surface Texture</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#graphic-design">
-                                            <figure class="cc-effect"><img src="public/images/graphic-design-4.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Abstract Line</div>
-                                                    <p>Graphic Design</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-pane" id="Photography" role="tabpanel">
-                        <div class="ml-auto mr-auto">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-1.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-3.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Wedding Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-2.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Beach Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                    <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                        data-aos-anchor-placement="top-bottom">
-                                        <a href="#Photography">
-                                            <figure class="cc-effect"><img src="public/images/photography-4.jpg"
-                                                    alt="Image" />
-                                                <figcaption>
-                                                    <div class="h4">Nature Photoshoot</div>
-                                                    <p>Photography</p>
-                                                </figcaption>
-                                            </figure>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+         <!-- ======= Portfolio Section ======= -->
+    <section class="section portfolio" id="portfolio">
+        <div class="container">
+  
+          <div class="section-title" data-aos="fade-in" data-aos-delay="100">
+            <h2>Portfolio</h2>
+            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          </div>
+  
+          <div class="row" data-aos="fade-in">
+            <div class="col-lg-12 d-flex justify-content-center">
+              <ul id="portfolio-flters">
+                <li data-filter="*" class="filter-active">All</li>
+                <li data-filter=".filter-app">App</li>
+                <li data-filter=".filter-card">Card</li>
+                <li data-filter=".filter-web">Web</li>
+              </ul>
             </div>
+          </div>
+  
+          <div class="row portfolio-container" data-aos="fade-up">
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt="">                
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img src="public/images/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="public/images/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+  
         </div>
+      </section><!-- End Portfolio Section -->
         <div class=" section" id="experience">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
