--- a/index.html
+++ b/index.html
@@ -589,6 +589,8 @@
     <script src="public/js/bootstrap.min.js"></script>
     <script src="public/js/aos-2.3.1.js"></script>
     <script src="public/js/parallax.min.js"></script>
+    <script src="public/js/venobox/venobox.min.css"></script>
+    <script src="public/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/js/main.js"></script>
 
 
