--- a/index.html
+++ b/index.html
@@ -582,13 +582,12 @@
     </footer>
 
 
-    <!-- All script -->
-    <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
+    <!-- All script -->    
     <script src="public/js/jquery-3.6.0.min.js"></script>
     <script src="public/js/popper-1.12.9.js"></script>
     <script src="public/js/bootstrap.min.js"></script>
-    <script src="public/js/aos-2.3.1.js"></script>
-    <script src="public/js/parallax.min.js"></script>
+    <script src="public/vendors/aos/aos-2.3.1.js"></script>
+    <script src="public/vendors/"></script>
     <script src="public/js/venobox/venobox.min.css"></script>
     <script src="public/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/js/main.js"></script>
