--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
+
+    <link href="public/vendors/icofont/icofont.min.css" rel="stylesheet">
+    <link href="public/vendors/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="public/vendors/venobox/venobox.css" rel="stylesheet">
+  <link href="public/vendors/owl.carousel/owl.carousel.min.js" rel="stylesheet">
+  <link href="public/vendors/aos/aos.css" rel="stylesheet">
 
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-    
-    <!-- CSS File  AOS -->
-    <link href="public/css/aos.css" rel="stylesheet">
 
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
@@ -583,11 +585,12 @@
 
 
     <!-- All script -->    
-    <script src="public/vendors/jquery/jquery-3.6.0.min.js"></script>
+    <script src="public/vendors/jquery/jquery.min.js"></script>
     <script src="public/vendors/bootstrap/popper-1.12.9.js"></script>
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
-    <script src="public/js/venobox/venobox.min.css"></script>
+    <script src="public/vendors/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="public/vendors/venobox/venobox.min.css"></script>
     <script src="public/vendor/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/js/main.js"></script>
 
