--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <div class="content">
         <div class="wrapper">
             <div class="content-profile">
-                <div class="welcom" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
-                  
+                <div class="welcom" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">                  
                 </div>
                 <div class="container content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
@@ -591,7 +590,8 @@
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="public/vendors/venobox/venobox.min.css"></script>
-    <script src="public/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
+    <script src="public/vendors/parallax.min.js"></script>
     <script src="public/js/main.js"></script>
 
 
