--- a/index.html
+++ b/index.html
@@ -663,6 +663,8 @@
     <script src="public/vendors/bootstrap/popper-1.12.9.js"></script>
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
+    <!-- à supprimer en cas de non inutilité -->
+    <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="public/vendors/venobox/venobox.min.css"></script>
