--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
     <!-- Vendor CSS Files -->
     <link href="public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
-
     <link href="public/vendors/icofont/icofont.min.css" rel="stylesheet">
     <link href="public/vendors/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="public/vendors/venobox/venobox.css" rel="stylesheet">
-    <link href="public/vendors/owl.carousel/owl.carousel.min.js" rel="stylesheet">
+    <link rel="stylesheet" href="public/vendors/venobox/venobox.min.css" type="text/css" media="screen" />
+    <link href="public/vendors/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="public/vendors/aos/aos.css" rel="stylesheet">
 
     <!-- font-awesome -->
@@ -306,12 +305,13 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
+                                <a href="public/images/portfolio/portfolio-1.jpg" class="venobox"><img
+                                        src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></a>
+                                <!-- <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -482,70 +482,96 @@
                 </div>
             </div>
         </section> <!-- End experiences Section -->
-         <!-- ======= Testimonials Section ======= -->     
+
+        <!-- ======= Testimonials Section ======= -->
         <section class=" section testimonials section-bg" id="testimonials">
-           <div class="container">
-            <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>   
-          <div class="card owl-carousel testimonials-carousel">  
-            <div class="testimonial-item" data-aos="fade-up">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="public/images/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+            <div class="container mb-5">
+                <div class="text-center mb-3" data-aos="fade-in" data-aos-delay="100">
+                    <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+                <div class="mt-5 owl-carousel owl-theme testimonials-carousel">
+                    <div class="testimonial-item" data-aos="fade-up">
+                        <img src="public/images/testimonials/testimonials-1.webp" class="testimonial-img" alt="">
+                        <h3>Saul Goodman</h3>
+                        <h4>Ceo &amp; Founder</h4>
+                        <p>
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                            Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
+                            Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        </p>
+
+                    </div>
+
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
+                        <p>
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                            Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum
+                            eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim
+                            culpa.
+                            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        </p>
+                        <img src="public/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                        <h3>Sara Wilsson</h3>
+                        <h4>Designer</h4>
+                    </div>
+
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
+                        <img src="public/images/testimonials/testimonials-3.webp" class="testimonial-img" alt="">
+                        <h3>Jena Karlis</h3>
+                        <h4>Store Owner</h4>
+                        <p>
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                            Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis
+                            minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        </p>
+                    </div>
+
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
+                        <p>
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                            Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim
+                            velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum
+                            veniam.
+                            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        </p>
+                        <img src="public/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                        <h3>Matt Brandon</h3>
+                        <h4>Freelancer</h4>
+                    </div>
+
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
+                        <img src="public/images/testimonials/testimonials-5.webp" class="testimonial-img" alt="">
+                        <h3>John Larson</h3>
+                        <h4>Entrepreneur</h4>
+                        <p>
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                            Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam
+                            enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore
+                            nisi cillum quid.
+                            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        </p>
+                    </div>
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
+                        <p>
+                            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                            Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam
+                            enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore
+                            nisi cillum quid.
+                            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        </p>
+                        <img src="public/images/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
+                        <h3>John Larson</h3>
+                        <h4>Entrepreneur</h4>
+                    </div>
+
+                </div>
+
             </div>
-  
-            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="public/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
-            </div>
-  
-            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="public/images/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
-            </div>
-  
-            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="public/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
-            </div>
-  
-            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="public/images/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
-            </div>
-  
-          </div>
-  
-        </div>
-      </section><!-- End Testimonials Section -->
+        </section><!-- End Testimonials Section -->
+
         <!-- ======= contact Section ======= -->
         <section class="section" id="contact">
             <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
@@ -659,7 +685,7 @@
 
 
     <!-- All script -->
-    <script src="public/vendors/jquery/jquery.min.js"></script>   
+    <script src="public/vendors/jquery/jquery.min.js"></script>
     <script src="public/vendors/bootstrap/popper-1.12.9.js"></script>
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
