--- a/index.html
+++ b/index.html
@@ -305,13 +305,12 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <div class="portfolio-wrap">
-                                <a href="public/images/portfolio/portfolio-1.jpg" class="venobox"><img
-                                        src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></a>
-                                <!-- <div class="portfolio-links">
+                                <img src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                                <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
 
@@ -415,7 +414,7 @@
                     <div class="row">
                         <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
                             data-aos-duration="500">
-                            <div class="card-body text-light">
+                            <div class="card-body align-middle text-light">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
