--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         </div>
         <div class="section mt-3" data-aos="fade-up" id="apropos">
             <div class="container">
-                <div class="row flex-row align-items-center justify-content-center card " data-aos="fade-up" data-aos-offset="8">
-                    <div class=" col-lg-6 col-md-6 col-sm-12">
+                <div class="row flex-row align-items-center  card " data-aos="fade-up" data-aos-offset="8">
+                    <div class="mt-5 col-lg-6 col-md-6 col-sm-12">
                         <img src="public/images/about.png" alt="about me" /> 
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
@@ -152,23 +152,23 @@
                             <div class="card-body">
                                 <div class="h4 mt-0 title">Basic Information</div>
                                 <div class="row">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
+                                    <div class="col-sm-4"><span class="text-uppercase">Age:</span></div>
                                     <div class="col-sm-8">24</div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+                                    <div class="col-sm-4"><span class="text-uppercase">Email:</span></div>
                                     <div class="col-sm-8">anthony@company.com</div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
+                                    <div class="col-sm-4"><span class="text-uppercase">Phone:</span></div>
                                     <div class="col-sm-8">+1718-111-0011</div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
+                                    <div class="col-sm-4"><span class="text-uppercase">Address:</span></div>
                                     <div class="col-sm-8">140, City Center, New York, U.S.A</div>
                                 </div>
                                 <div class="row mt-3">
-                                    <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
+                                    <div class="col-sm-4"><span class="text-uppercase">Language:</span></div>
                                     <div class="col-sm-8">English, German, French</div>
                                 </div>
                             </div>
